<resources>
    <string name="app_name">FakeFacebook</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_new_facebook_account">Create New Facebook Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook">facebook</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_password">New Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="Home">Home</string>
    <string name="friends">Friends</string>
    <string name="notifications">Notifications</string>
    <string name="menu">Menu</string>
    <string name="notifications_fragment">Notifications Fragment</string>
    <string name="menu_fragment">Menu Fragment</string>
    <string name="friends_fragment">Friends Fragment</string>
    <string name="email">Email</string>
    <string name="send_password_reset">Send Password Reset</string>


</resources>