<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
           >


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center_horizontal"
                android:text="@string/facebook"
                android:textColor="@color/white"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText

                android:id="@+id/editText_Email_Or_Phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:layout_marginStart="30sp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="30sp"
                android:background="@color/white"
                android:hint="@string/email_or_phone_number"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="-16dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editText_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30sp"
                android:autofillHints=""
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_Email_Or_Phone"
                tools:ignore="LabelFor"
                tools:layout_editor_absoluteX="0dp" />

            <Button
                android:id="@+id/button_LogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30sp"
                android:text="@string/log_in"
                app:layout_constraintTop_toBottomOf="@+id/editText_Password"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textView_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="280dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/button_Sign_Up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="136dp"
                android:text="@string/sign_up_for_facebook"
                android:textColor="@color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    </FrameLayout>


