<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.SignUp.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center_horizontal"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/editText_FirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@color/white"
            android:hint="@string/first_name"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_editor_absoluteX="-16dp"/>

        <EditText
            android:id="@+id/editText_LastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/editText_FirstName"
            android:layout_marginTop="15dp"
            android:hint="@string/last_name"
            android:padding="15dp" />
        <EditText
            android:id="@+id/editText_Age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@color/white"
            android:padding="15dp"
            android:inputType="number"
            android:hint="age"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_LastName"
            />
        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Age"
            android:hint="Email"
            />
        <EditText
            android:id="@+id/editText_NewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_Email"
            android:hint="@string/new_password"/>


        <Button
            android:id="@+id/signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_NewPassword" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>